--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -20,7 +20,7 @@
     }
 
         .Project:hover {
-            background: rgba(14, 20, 19, 0.8);
+            background: rgba(14,20,19,0.8);
         }
 
         .Project-image {
