--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -8,7 +8,7 @@
     font-family: 'Open Sans', sans-serif; /* League Gothic */
     font-size: 0.8em;
     transition: top 0.3s;
-    background: var(--gradient);
+    background: var(--secondary-color);
     padding: 3em 0;
     transition: all 0.2s ease-in-out;
   
