--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -7,7 +7,7 @@
   font-family: 'Open Sans', sans-serif; /* League Gothic */
   font-size: 0.8em;
   transition: top 0.3s;
-  background: var(--gradient);
+  background: var(--secondary-color);
   padding: 3em 0;
   transition: all 0.2s ease-in-out;
 
@@ -21,7 +21,7 @@
 
   .header-shadow {
     padding: 1em 0;
-    box-shadow: 0px -5px 15px rgba(255, 255, 255, 0.15);
+    box-shadow: 0px -5px 15px rgba(255,255,255,0.15);
     transition: all 0.2s ease-in-out;
   }
 
