--- a/src/App.css
+++ b/src/App.css
@@ -36,14 +36,14 @@ html {
   
 body {
   background: var(--secondary-color);
-
   height: 100%;
   color: var(--primary-color);
-
+  
   -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
 }
+
 
 .separator {
   position: relative;
@@ -68,12 +68,21 @@ body {
 .Content {
   max-width: var(--wrap-width);
   margin: 0 auto;
+    
+  opacity: 0;
+  transition: all 1s ease;
+}
+.load {
+  opacity: 1;
 }
 
   .Content > div {
     padding: 100px 0px;
   }
 
+  .reveal {
+    transition: reveal 1s ease-in-out;
+  }
 
 /* Text */
 @import url('https://fonts.googleapis.com/css2?family=League+Gothic&family=Open+Sans&family=Fjalla+One&display=swap');
@@ -110,7 +119,7 @@ a:hover {
 
 
 @keyframes reveal {
-    0%   { transform: translateX(2.5em); }
+    0%   { transform: translateX(5em); }
     100%   { transform: translateX(0em); }
 }
 
@@ -136,6 +145,8 @@ a:hover {
         transform: translateY(60px) scale3d(0.5, 0.5, 0.5);
     }
 }
+
+
 
 
 @keyframes pulse {
